# murmur

./: .github-release-checklist.md  .gitignore  BUGS_FOUND.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  PROGRESS.md  QUICKSTART.md  README.md  STATUS.md  TESTING_RESULTS.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  HYPRLAND.md  INSTALLATION.md  ROCM_BUILD.md
murmur_cli/: __init__.py  cli.py
murmur_daemon/: __init__.py  config.py  daemon.py  ipc_server.py  transcriber.py
murmur_gui/: __init__.py  waveform.py  window.py
systemd/: murmur-daemon.service  whisper-daemon.service
whisper_cli/: __init__.py  cli.py
whisper_daemon/: __init__.py  audio_capture.py  config.py  daemon.py  ipc_server.py  text_injector.py  transcriber.py
whisper_gui/: styles.py  window.py
