[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-voice-input"
version = "0.1.0"
description = "Real-time voice-to-text transcription tool for Linux Wayland"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Abraham van der Linde"}
]
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "webrtcvad>=2.0.10",
    "PyQt6>=6.6.0",
    "PyQt6-sip>=13.6.0",
    "pyperclip>=1.8.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
whi = "whisper_cli.cli:main"
whisper-daemon = "whisper_daemon.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
